fix:Save button profile position on mobile

--- a/Frontend/src/app/modules/profiles/profiles.component.scss
+++ b/Frontend/src/app/modules/profiles/profiles.component.scss
@@ -137,7 +137,9 @@ $path:'../../../assets/images/';
   }
   .save{
     width:100%;
-    padding-right: 20px;
+    .btn-flat:hover{
+      background-color: #eee;
+    }
     div {
       float: right;
     }
